# test-interview

./: .gitignore  README.md  pyproject.toml  tasks.py
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  test.yaml
src/: main.py
src/cleaning_loading_app/: cleaner_loader.py  const.py  csv_io.py  filesystem.py  transformations.py
tests/: test_csv_io.py  test_transformations.py
