[tool.poetry]
name = "test-servier"
version = "0.1.0"
description = ""
authors = ["Emmanuel Sciara <emmanuel.sciara@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
invoke = "^2.2.0"
mypy = "^1.7.1"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
ruff = "^0.1.8"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov=src --cov-report html:reports/python/htmlcov --cov-report xml:reports/python/coverage.xml --cov-report=term --junitxml=reports/python/xunit.xml --ignore=src"
testpaths = [
    "tests",
]
pythonpath = [
    "src"
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "B"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
