[tool.poetry]
name = "test-servier"
version = "0.1.0"
description = ""
authors = ["Emmanuel Sciara <emmanuel.sciara@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
icecream = "^2.1.3"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
invoke = "^2.2.0"
isort = "^5.13.2"
mypy = "^1.11.0"
pandas-stubs = "^2.2.2.240603"
pyhamcrest = "^2.1.0"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
ruff = "^0.5.1"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov=src --cov-report html:reports/python/htmlcov --cov-report xml:reports/python/coverage.xml --cov-report=term --junitxml=reports/python/xunit.xml --ignore=src"
testpaths = [
    "tests",
]
pythonpath = [
    "src"
]

[tool.isort]
# following black's doc for compatibility
# See https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#isort
profile = "black"

[tool.black]
target_version = ["py311"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "B"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "icecream"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
